--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,7 +66,7 @@ a {
 }
 
 .card {
-  @apply text-white backdrop-brightness-50 hover:backdrop-brightness-0 h-72 md:h-96 p-10;
+  @apply relative text-white backdrop-brightness-50 hover:backdrop-brightness-0 h-72 md:h-96 p-10;
 }
 .cardLink {
   @apply rounded-full bg-white text-black absolute bottom-10 right-10 w-9 h-9 p-3;
